NFT Page Update

--- a/index.html
+++ b/index.html
@@ -212,10 +212,36 @@
                         <!-- Portfolio Website Start -->
                         <div class="project-item active" id="projects-software">
                             <div class="project-item-thumbnail">   
+                                <img src="images/NFT1.png" alt="project item thumb">
+                            </div>
+                            <h3 class="project-item-title center">NFT Website</h3>
+                            <button type="button" class="btn view-project-btn">Project Details</button>
+                            <button type="button" onclick="window.open('http://www.collegedropoutnft.com','_blank')" class="btn">Visit Website</button>
+                            <div class="project-item-details">
+                                <div class="project-item-images">
+                                    <img src="images/NFT1.png">
+                                </div>
+                                <div class="description center">
+                                    <p> A website created for a nft collection. Focus on UI and UX.
+                                    </p>
+                                </div>
+                                <div class="general-info center">
+                                    <ul>
+                                        <li>Created - <span>April 2022</span></li>
+                                        <li>Languages used - <span>HTML5, CSS, JavaScript</span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Website End -->
+                        <!-- Portfolio Website Start -->
+                        <div class="project-item active" id="projects-software">
+                            <div class="project-item-thumbnail">   
                                 <img src="images/portfolio1.jpg" alt="project item thumb">
                             </div>
                             <h3 class="project-item-title center">Portfolio Website</h3>
                             <button type="button" class="btn view-project-btn">Project Details</button>
+                            <button type="button" onclick="window.open('http://www.danielmillerportfolio.com','_blank')" class="btn">Visit Website</button>
                             <div class="project-item-details">
                                 <div class="project-item-images">
                                     <img src="images/portfolio1.jpg">
