Commit NFT Update

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                     <img src="images/NFT1.png">
                                 </div>
                                 <div class="description center">
-                                    <p> A website created for a nft collection. Focus on UI and UX.
+                                    <p> A website created for a nft collection. Focus on UI and UX. Worked with Nft team and got feedback.
                                     </p>
                                 </div>
                                 <div class="general-info center">
