Updated NFT Project

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             </div>
                         </div>
                         <!-- Project Management Website End -->
-                        <!-- Portfolio Website Start -->
+                        <!-- NFT Website Start -->
                         <div class="project-item active" id="projects-software">
                             <div class="project-item-thumbnail">   
                                 <img src="images/NFT1.png" alt="project item thumb">
@@ -233,7 +233,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Portfolio Website End -->
+                        <!-- NFT Website End -->
                         <!-- Portfolio Website Start -->
                         <div class="project-item active" id="projects-software">
                             <div class="project-item-thumbnail">   
