Inluded detail about POS.

--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
                                 <div class="description center">
                                     <p> A website built using website builder Zyro along with some of my
                                         own html, css and javascript.
+                                        Used APIS to create a POS on the website.
                                     </p>
                                 </div>
                                 <div class="general-info center">
