--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <div class="container">
             <div class="row flex-end">
                 <div class="toggle" style="font-size: 35px;">
-                    <i class="far fa-moon toggle-icon"></i>
-                    <i class="far fa-sun toggle-icon"></i>
+                    <i class="far fa-moon toggle-icon" style="padding-top: 5px;"></i>
+                    <i class="far fa-sun toggle-icon" style="padding-top: 5px;"></i>
                     <div class="toggle-ball"></div>
                 </div>
                 <button type="button" class="nav-toggler">
