Minor Text Changes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="home-text">
                     <p>Hello, I'm</p>
                     <h1>Daniel Miller</h1>
-                    <h2>Civil Engineer<br>Construction Manager<br>Software Developer<br>Entrepreneur</h2>
+                    <h2>Software Engineer<br>Civil Engineer<br>Construction Manager<br>Entrepreneur</h2>
                     <a href="#about" class="btn link-item">About Me</a>
                     <a href="#projects" class="btn link-item">Projects</a>
                 </div>
